--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
         </ul>
       </nav>
     </div>
-    <script src="script.js"></script>
+    <script src="App.js"></script>
   </body>
 </html>
